--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -230,7 +230,7 @@ it = Italian
 jp = Japanese
 lt = Lithuanian
 nl = Dutch
-no = Norvegian
+nor = Norwegian
 pl = Polish
 pt = Portuguese
 pt_br = Portuguese (Brazilian)
