- projectfolders table field parent missing in install - edited tpl-files (missing { } and one invalid path) for both standard and frost template - edited cz language file http://collabtive.o-dyn.de/forum/viewtopic.php?f=11&t=1115

--- a/language/cz/lng.conf
+++ b/language/cz/lng.conf
@@ -281,7 +281,7 @@ started = zahájen/a
 totalhours = Celkem hodin
 timetable = Rozvrh pro
 timetracker = Timetracker
-timetrackeradded = 
+timetrackeradded = Timetracker přidán
 add = Přidat
 addrole = Přidat roli
 delete = Smazat
@@ -292,8 +292,8 @@ permissionread = Čtení
 permissions = Oprávnění
 permissionswereedited = Oprávnění byla upravena
 role = Role
-roleadded = 
-roleedited = 
+roleadded = Role přidána
+roleedited = Role upravena
 roles = Role
 active = Aktivní
 activity = Poslední akce
@@ -306,7 +306,7 @@ assigned = přiřazen/a
 attachbutton = Připojit
 by = vytvořil/a
 cancel = Storno
-chat = 
+chat = Chat
 chooseone = Prosím vyberte
 close = Zavřít
 closed = zavřen/a
@@ -341,7 +341,7 @@ rssuser = RSS uživatelské jméno
 send = Zaslat
 settings = Nastavení
 settingschanged = Nastavení bylo změněno
-settingsedited = 
+settingsedited = Nastavení bylo upraveno
 showall = Ukázat vše
 subtitle = Podtitulek
 systemadministration = Systémová nastavení
