--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -34,6 +34,7 @@ male = Male
 members = People
 myaccount = My account
 newpass = New password
+none = None
 oldpass = Old password
 password = Password
 phone = Phone
@@ -61,6 +62,7 @@ zip = Postcode
 access = Access
 addproject = Add project
 assignto = Assign to
+budget = Budget
 closedprojects = Closed projects
 deassign = Deassign
 description = Description
@@ -184,6 +186,8 @@ directory = Directory
 editfile = Edit file
 editfolder = Edit folder
 file = File
+filecreatedsubject = Collabtive notification: File added
+filecreatedtext = Hello,<br />a file has been added to one of your projects.
 files = Files
 filewasadded = File was added
 filewasdeleted = File was deleted
@@ -194,7 +198,9 @@ folderwasdeleted = Folder was deleted
 folderwasedited = Folder was edited
 managefolders = Manage folders
 maxsize = Maximum size
+parent = Parent folder
 rootdir = Root directory
+visibility = Visible for
 
 {* Search *}
 
@@ -225,12 +231,13 @@ es = Spanish
 es_gl = Galician
 fi = Finnish
 fr = French
+gr = Greek
 hu = Hungarian
 it = Italian
 jp = Japanese
 lt = Lithuanian
 nl = Dutch
-nor = Norwegian
+no = Norvegian
 pl = Polish
 pt = Portuguese
 pt_br = Portuguese (Brazilian)
@@ -367,12 +374,14 @@ edited = edited
 excelexport = Excel
 export = Export
 favicon = Favicon
+general = General
 help = Help
 icalexport = iCal
 import = Import from Basecamp
 importsuccess = Import successfully completed
 inactive = Inactive
 no = No
+notify = Notify
 objoff = Inactive
 objon = Active
 on = Created
