Contribution von Martin Thogersen, damit jetzt von 91% hoch auf 100%

--- a/language/da/lng.conf
+++ b/language/da/lng.conf
@@ -30,6 +30,7 @@ male = Mand
 members = Medlemmer
 myaccount = Min konto
 newpass = Ny adgangskode
+none = Ingen
 oldpass = Nuværende adgangskode
 password = Adgangskode
 phone = Telefon
@@ -54,6 +55,7 @@ zip = Postnummer
 access = Adgang
 addproject = Tilføj projekt
 assignto = Tildel til
+budget = Budget
 closedprojects = Afsluttede projekter
 deassign = Fjern
 description = Beskrivelse
@@ -143,10 +145,10 @@ mailmethod = Metode
 mailserver = Server
 mailusername = SMTP brugernavn
 mailpass = SMTP kodeord
-profileaddedsubject = 
-profileaddedtext = 
-profilepass = 
-profileusername = 
+profileaddedsubject = Collabtive - Din nye profil
+profileaddedtext = En ny brugerprofil er blevet oprettet for dig.
+profilepass = Kodeord
+profileusername = Brugernavn
 projectassignedsubject = Projekt oplysning: Projekt tildelt
 projectassignedtext = Hej,<br />en ny projekt er blevet tildelt til dig:
 taskassignedsubject = Projekt oplysning: Opgave tildelt
@@ -162,6 +164,8 @@ directory = Mappe
 editfile = Rediger fil
 editfolder = Rediger mappe
 file = Fil
+filecreatedsubject = Collabtive info: fil tilføjet
+filecreatedtext = En fil er blevet tilføjet til dit projekt.
 files = Filer
 filewasadded = Filen blev tilføjet
 filewasdeleted = Filen blev slettet
@@ -172,7 +176,9 @@ folderwasdeleted = Mappen blev slettet
 folderwasedited = Mappen blev rettet
 managefolders = Håndter mapper
 maxsize = Maksimum størrelse
+parent = Ovenliggende mappe
 rootdir = Rod mappe
+visibility = Synlig for
 advancedsearch = Avanceret søgning
 didyoumean = Mente du
 gosearch = Søg!
@@ -185,9 +191,9 @@ search = Søg
 searchfor = Søg efter
 searching = Søger..
 searchitem = Søgestreng
-ar = 
+ar = Arabisk
 bg = Bulgarsk
-ca = 
+ca = Catalan
 cn = Kinesisk
 cz = Tjekkisk
 da = Dansk
@@ -195,14 +201,15 @@ de = Tysk
 en = Engelsk
 es = Spansk
 es_gl = Galicisk
-fi = 
+fi = Finsk
 fr = Fransk
+gr = Græsk
 hu = Ungarsk
 it = Italiensk
 jp = Japansk
 lt = Litauisk
 nl = Hollandsk
-no = Nej
+nor = Nej
 pl = Polsk
 pt = Portugisisk
 pt_br = Portugisisk (brasiliensk)
@@ -210,9 +217,9 @@ ro = Rumænsk
 rs = Serbisk
 ru = Russisk
 se = Svensk
-sk = 
+sk = Slovensk
 tr = Tyrkisk
-ua = 
+ua = Ukraine
 calendar = Kalender
 dateformat = Dato format
 timezone = Tidszone
@@ -282,19 +289,19 @@ totalhours = Total antal timer
 timetable = Tidsplan for
 timetracker = Tidshåndtering
 timetrackeradded = Tiden blev tilføjet
-add = 
-addrole = 
+add = Tilføj
+addrole = Tilføj rolle
 delete = Slet
-delrole = 
+delrole = Slet rolle
 edit = Rediger
-editrole = 
-permissionread = 
+editrole = Rediger rolle
+permissionread = Læse
 permissions = Tilladelser
 permissionswereedited = Tilladelser blev rettet
 role = Rolle
-roleadded = 
-roleedited = 
-roles = 
+roleadded = Rolle blev tilføjet
+roleedited = Rolle blev rettet
+roles = Roller
 active = Aktiv
 activity = Aktivitet
 action = Handling
@@ -306,7 +313,7 @@ assigned = tildelt
 attachbutton = Vedhæft
 by = Af
 cancel = Annuller
-chat = 
+chat = Chat
 chooseone = Vælg venligst
 close = Luk
 closed = lukket
@@ -320,11 +327,13 @@ edited = rettet
 excelexport = Excel
 export = Eksporter
 favicon = Favicon
+general = Generelt
 help = Hjælp
 icalexport = iCal
 import = Importér fra Basecamp
 importsuccess = Importen blev gennemført
 inactive = Inaktiv
+notify = Informer
 objoff = Inaktiv
 objon = Aktiv
 on = Oprettet
@@ -336,12 +345,12 @@ pdfexport = PDF
 private = Privat
 public = Offentlig
 rssfeed = RSS
-rsspass = 
-rssuser = 
+rsspass = RSS kodeord
+rssuser = RSS bruger
 send = Gem
 settings = Indstillinger
 settingschanged = Indstillinger blev ændret
-settingsedited = 
+settingsedited = Insstillinger ændret
 showall = Vis alle
 subtitle = Undertitel
 systemadministration = Systemadministration
