--- a/language/de/lng.conf
+++ b/language/de/lng.conf
@@ -85,7 +85,7 @@ edittasklist = Aufgabenliste bearbeiten
 latetasks = Verspätete Aufgaben
 mytasks = Meine Aufgaben
 newtasks = Aktuelle Aufgaben
-notasklists = Keine Aufgabenliste gefunden.<br /> Bitte zuerst eine <a href = "javascript:blindtoggle('addlist');">Taskliste erzeugen</a>
+notasklists = Keine Aufgabenliste gefunden.<br /> Bitte zuerst eine Taskliste erzeugen.
 notasks = Zur Zeit stehen keine Aufgaben an.
 openprogress = Offen
 status = Status
@@ -197,12 +197,13 @@ es = Spanisch
 es_gl = Galizisch
 fi = Finnisch
 fr = Französisch
+gr = Griechisch
 hu = Ungarisch
 it = Italienisch
 jp = Japanisch
 lt = Litauisch
 nl = Niederländisch
-no = Nein
+nor = Norwegisch
 pl = Polnisch
 pt = Portugiesisch
 pt_br = Portugiesisch (Brasilien)
@@ -325,6 +326,7 @@ icalexport = iCal
 import = Basecamp-Import
 importsuccess = Import erfolgreich
 inactive = Inaktiv
+no = Nein
 objoff = Aus
 objon = An
 on = Erstellt am
