Improved a few translations

--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -97,7 +97,7 @@ edittasklist = Edit tasklist
 latetasks = Late tasks
 mytasks = My tasks
 newtasks = New tasks
-notasklists = No tasklist found.<br />Please <a href = "javascript:blindtoggle('addlist');">create a tasklist</a>.
+notasklists = No tasklist found.<br />Please create a tasklist.
 notasks = No tasks pending
 openprogress = Open
 status = Status
@@ -169,9 +169,9 @@ profileaddedtext = A new user profile has been created for you.
 profilepass = Password
 profileusername = Username
 projectassignedsubject = Collabtive notification: Project assigned
-projectassignedtext = Hello,<br />a new project has been assigned to you:
+projectassignedtext = Hello,<br /><br />a new project has been assigned to you:<br />
 taskassignedsubject = Collabtive notification: Task assigned
-taskassignedtext = Hello,<br />a new task has been assigned to you:
+taskassignedtext = Hello,<br /><br />a new task has been assigned to you:<br />
 
 {* Files *}
 
@@ -187,7 +187,7 @@ editfile = Edit file
 editfolder = Edit folder
 file = File
 filecreatedsubject = Collabtive notification: File added
-filecreatedtext = Hello,<br />a file has been added to one of your projects.
+filecreatedtext = Hello,<br /><br />a file has been added to one of your projects.<br />
 files = Files
 filewasadded = File was added
 filewasdeleted = File was deleted
@@ -237,7 +237,7 @@ it = Italian
 jp = Japanese
 lt = Lithuanian
 nl = Dutch
-no = Norvegian
+nor = Norwegian
 pl = Polish
 pt = Portuguese
 pt_br = Portuguese (Brazilian)
