--- a/language/nl/lng.conf
+++ b/language/nl/lng.conf
@@ -30,6 +30,7 @@ male = Man
 members = Leden
 myaccount = Mijn gegevens
 newpass = Nieuw wachtwoord
+none = Geen
 oldpass = Oud wachtwoord
 password = Wachtwoord
 phone = Telefoon
@@ -51,9 +52,13 @@ userwasedited = Gebruikersprofiel aangepast
 vcardexport = vCard
 welcomeback = Welkom terug
 zip = Postcode
+
+{* Project *}
+
 access = Toegang
 addproject = Project toevoegen
-assignto = Toekennen
+assignto = Toekennen  
+budget = Budget
 closedprojects = Afgesloten projecten
 deassign = Ontkoppelen
 description = Omschrijving
@@ -62,6 +67,7 @@ myprojects = Mijn projecten
 name = Naam
 noprojects = Geen projecten gevonden
 openprojects = Geopende projecten
+
 project = Project
 projects = Projecten
 projectadministration = Projectadministratie
@@ -73,6 +79,9 @@ projectwasedited = Project aangepast
 projectwasopened = Project geopend
 report = Rapport
 start = Start
+
+{* Task / Tasklist *}
+
 addtask = Taak toevoegen
 addtasklist = Taaklijst toevoegen
 assign = Toekennen
@@ -85,7 +94,7 @@ edittasklist = Taaklijst aanpassen
 latetasks = Datum overschreden
 mytasks = Mijn taken
 newtasks = Nieuwe taken
-notasklists = Geen <a href
+notasklists = Geen taaklijst gevonden.<br /><a href = "javascript:blindtoggle('addlist');">Voeg een nieuwe taaklijst toe</a>.
 notasks = Geen taken
 openprogress = Open
 status = Status
@@ -107,6 +116,9 @@ taskwasedited = Taak aangepast
 taskwasopened = Taak geopend
 text = Tekst
 todaytasks = Taken voor vandaag
+
+{* Milestone *}
+
 addmilestone = Mijlpaal toevoegen
 donemilestones = Mijlpaal afgehandeld
 due = Streefdatum
@@ -122,6 +134,9 @@ milestonewasedited = Mijlpaal aangepast
 milestonewasopened = Mijlpaal geopend
 newmilestones = Nieuwe mijlpalen
 todaystones = Mijlpalen voor vandaag
+
+{* Messages *}
+
 addmessage = Notitie toevoegen
 answer = Reactie
 editmessage = Notitie wijzigen
@@ -137,6 +152,9 @@ replywasadded = Reactie toegevoegd
 replywasdeleted = Reactie verwijderd
 replywasedited = Reactie aangepast
 title = Titel
+
+{* eMails *}
+
 mailfrommail = Email afzender
 mailfromname = Naam afzender
 mailmethod = Verzend methode
@@ -148,9 +166,12 @@ profileaddedtext = Een nieuw gebruikersprofiel is voor u aangemaakt
 profilepass = Wachtwoord
 profileusername = Gebruikersnaam
 projectassignedsubject = Collabtive - Project toegewezen aan onderwerp
-projectassignedtext = Project toegewezen:
+projectassignedtext = Hallo,<br />een nieuw project is aan u toegewezen:
 taskassignedsubject = Collabtive - Onderwerp toegewezen aan taak
-taskassignedtext = Taak toegewezen:
+taskassignedtext = Hallo,<br />een nieuwe taak is aan u toegewezen:
+
+{* Files *}
+
 addfile = Bestand toevoegen
 addfiles = Bestanden toevoegen
 addfolder = Map toevoegen
@@ -162,6 +183,8 @@ directory = Map
 editfile = Bestand aanpassen
 editfolder = Map wijzigen
 file = Bestand
+filecreatedsubject = Collabtive notificatie: Bestand toegevoegd
+filecreatedtext = Hallo,<br />een bestand is aan een van uw projecten toegevoegd.
 files = Bestanden
 filewasadded = Bestand toegevoegd
 filewasdeleted = Bestand verwijderd
@@ -172,7 +195,12 @@ folderwasdeleted = Map verwijdert
 folderwasedited = Map bijgewerkt
 managefolders = Beheer mappen
 maxsize = Maximum grootte
+parent = Bovenliggende map
 rootdir = Hoofdmap
+visibility = Zichtbaar voor
+
+{* Search *}
+
 advancedsearch = Uitgebreid zoeken
 didyoumean = Bedoelt u
 gosearch = Zoek
@@ -185,6 +213,9 @@ search = Zoek
 searchfor = Zoeken naar
 searching = Zoeken...
 searchitem = Zoekterm
+
+{* Languages *}
+
 ar = Arabisch
 bg = Bulgaars
 ca = Catalaans
@@ -197,12 +228,13 @@ es = Spaans
 es_gl = Galician
 fi = Fins
 fr = Frans
+gr = Greek
 hu = Hongaars
 it = Italiaans
 jp = Japans
 lt = Lithouws
 nl = Nederlands
-no = Nee
+nor = Noorweegs
 pl = Pools
 pt = Portugees
 pt_br = Portugees (Br)
@@ -213,6 +245,9 @@ se = Zweeds
 sk = Slowaaks
 tr = Turks
 ua = Oekraïens
+
+{* Calendar *}
+
 calendar = Kalender
 dateformat = Formaat datum
 timezone = Tijdszone
@@ -237,6 +272,9 @@ september = September
 october = Oktober
 november = November
 december = December
+
+{* Errors *}
+
 accessdenied = Geen toegang
 confirmdel = Verwijderen kan niet ongedaangemaakt worden.\n Doorgaan?
 error = Fout
@@ -246,6 +284,9 @@ notyourproject = Project niet aan u gekoppeld
 wrongfield = Corrigeer \"%FIELDNAME%\"
 wrongfields = Corrigeer:\n\n
 wrongselect = Corrigeer \"%FIELDNAME%\"
+
+{* Installation *}
+
 createadmin = Admin aanmaken
 clickcontinue = Klik op "verder" om door te gaan
 continue = Verder
@@ -267,6 +308,9 @@ makedirwritable = Geef schrijfrechten aan map
 makefilewritable = Geef schrijfrechten aan bestand
 phpversion = PHP versie
 proceedtologin = Ga verder en log in
+
+{* Timetracker *}
+
 comment = Commentaar
 edittimetracker = Wijzig urenverantwoording
 endafterstart = Einddatum voor startdatum
@@ -276,12 +320,16 @@ filterreport = Filter rapport
 hours = Uur
 inserttime = Huidige tijd
 noassociatedtask = Geen taak geselecteerd
+report = Rapport
 reporting = Rapporteren
 started = Gestart
 totalhours = Totale tijd [uur]
 timetable = Urenverantwoording voor
 timetracker = Urenverantwoording
 timetrackeradded = Urenverantwoording toegevoegt
+
+{* Roles / Permissions *}
+
 add = Toevoegen
 addrole = Toevoegen
 delete = Verwijder
@@ -295,6 +343,9 @@ role = Rol
 roleadded = Rol werd toegevoegd
 roleedited = Tol werd gewijzigd
 roles = Rollen
+
+{* Miscellaneous *}
+
 active = Actief
 activity = Activiteit
 action = Actie
@@ -320,11 +371,14 @@ edited = gewijzigd
 excelexport = Excel
 export = Uitvoeren
 favicon = Favicon
+general = Algemeen
 help = Help
 icalexport = iCal
 import = Importeren
 importsuccess = Importeren gelukt
 inactive = Inaktief
+no = Nee
+notify = Notificatie
 objoff = Inaktief
 objon = Aktief
 on = Aangemaakt
@@ -343,6 +397,7 @@ settings = Instellingen
 settingschanged = Instellingen aangepast
 settingsedited = Instellingen aangepast
 showall = Alles tonen
+started = Gestart
 subtitle = Subtitel
 systemadministration = Systeem administratie
 systemdefault = Standaardwaarde
