updated dutch language file

--- a/language/nl/lng.conf
+++ b/language/nl/lng.conf
@@ -2,7 +2,7 @@ address = Adres
 adduser = Gebruiker toevoegen
 admin = Admin
 all = Iedereen
-avatar = Beeldmerk
+avatar = Avatar
 cellphone = GSM
 changepassword = Verander wachtwoord
 chatwith = Chat met
