Corrected some strings

--- a/language/cz/lng.conf
+++ b/language/cz/lng.conf
@@ -202,7 +202,7 @@ it = Italština
 jp = Japonština
 lt = Litevština
 nl = Nizozemština
-no = Ne
+nor = Norština
 pl = Polština
 pt = Portugalština
 pt_br = Portugalština (Brazílie)
@@ -325,6 +325,7 @@ icalexport = iCal
 import = Importovat Basecamp
 importsuccess = Import úspěšný
 inactive = Neaktivní
+no = Ne
 objoff = vypnuto
 objon = zapnuto
 on = Vytvořen/a
